Rajout de quelques lignes Meta

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
 <head>
-    <title>Portfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio de Bika</title>
+    <meta name="description" content="Bienvenue sur le portfolio de Bika. Découvrez mes compétences, projets et expériences.">
+    <meta name="author" content="Mohamed Amine Benkhalifa">
+    <meta name="keywords" content="Portfolio, Bika, Développeur, Compétences, Projets, Expériences">
+    <link rel="icon" href="icone.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -11,18 +17,18 @@
                 <img src="logo.png" alt="Logo" class="logo">
             </div>
             <ul class="menu-navigation">
-                <li><a href="index.html">Accueil</a></li>
+                <li><a href="accueil.html">Accueil</a></li>
                 <li><a href="Curriculum.html">CV</a></li>
-                <li><a href="Portfolio.html">Portfolio</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="Competences.html">Gestion De Compétences</a></li>
-                <li><a href="Contact.html">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
     
     <section class="section-heros">
         <div class="contenu-heros">
-            <img src="Profile.jpg" alt="Photo" class="photo-heros">
+            <img src="profile.jpg" alt="Photo" class="photo-heros">
             <h1>Bienvenue, je suis BIKA</h1>
             <p>Étudiant en WEBDESIGN. Découvrez mon univers.</p>
             <a href="Portfolio.html" class="bouton-cta">Explorer mon Portfolio</a>
