--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
     <section class="section-heros">
         <div class="contenu-heros">
-            <img src="profile.jpg" alt="Photo" class="photo-heros">
+            <img src="Profile.jpg" alt="Photo" class="photo-heros">
             <h1>Bienvenue, je suis BIKA</h1>
             <p>Étudiant en WEBDESIGN. Découvrez mon univers.</p>
             <a href="Portfolio.html" class="bouton-cta">Explorer mon Portfolio</a>
