Added SEO Content for Portfolio,Curriculum,Contact,Competences

--- a/Competences.html
+++ b/Competences.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon CV</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Gestion De Compétences - Bika</title>
+        <meta name="description" content="Découvrez les compétences de Bika en design et développement web.">
+        <meta name="author" content="Mohamed Amine Benkhalifa">
+        <meta name="keywords" content="Compétences, Bika, Développeur, Design, Web, Expériences">
+        <link rel="icon" href="path/to/your/icon.png" type="image/png">
+        <link rel="stylesheet" href="styles.css">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    </head>
 <body>
     <header>
         <nav>
