--- a/Curriculum.html
+++ b/Curriculum.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon CV</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Mon CV</title>
+        <meta name="description" content="Découvrez le CV de Bika, un passionné de design et de développement web.">
+        <meta name="author" content="Mohamed Amine Benkhalifa">
+        <meta name="keywords" content="CV, Bika, Développeur, Design, Web, Expériences, Compétences">
+        <link rel="icon" href="icone.png" type="image/png">
+        <link rel="stylesheet" href="styles.css">
+    </head>
 <body>
     <header>
         <nav>
