--- a/Contact.html
+++ b/Contact.html
@@ -10,6 +10,7 @@
         <link rel="icon" href="icone.png" type="image/png">
         <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+        <link rel="canonical" href="https://el-bika.github.io/Archi-TP/index.html">
     </head>
 <body>
     <header>
