--- a/Curriculum.html
+++ b/Curriculum.html
@@ -9,6 +9,7 @@
         <meta name="keywords" content="CV, Bika, Développeur, Design, Web, Expériences, Compétences">
         <link rel="icon" href="icone.png" type="image/png">
         <link rel="stylesheet" href="styles.css">
+        <link rel="canonical" href="https://el-bika.github.io/Archi-TP/index.html">
     </head>
 <body>
     <header>
