Added H1 Description to Competences

--- a/Competences.html
+++ b/Competences.html
@@ -30,6 +30,7 @@
             
             <section id="competences" class="competences-section">
                 <div class="section-title">
+                    <h1>Gestion De Compétences</h1>
                     <h2>Mes Compétences</h2>
                     <p>Découvrez mes compétences professionnelles et techniques</p>
                 </div>
