removed canonical from index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Portfolio, Bika, Développeur, Compétences, Projets, Expériences">
     <link rel="icon" href="icone.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
-    <link rel="canonical" href="https://el-bika.github.io/Archi-TP/index.html">
+    <link rel="canonical" href="">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
