Added description to portfolio/Index.html fix

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portfolio</title>
+        <title>Portfolio de Bika - Projets et Créations</title>
         <meta name="description" content="Découvrez les projets et créations de Bika, un passionné de design et de développement web.">
         <meta name="author" content="Mohamed Amine Benkhalifa">
         <meta name="keywords" content="Portfolio, Bika, Projets, Créations, Design, Développement web">
