Added optimal title length for curriculum and contact pages

--- a/Curriculum.html
+++ b/Curriculum.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Mon CV</title>
+        <title>CV de Bika - Développeur Web et Designer</title>
         <meta name="description" content="Découvrez le CV de Bika, un passionné de design et de développement web.">
         <meta name="author" content="Mohamed Amine Benkhalifa">
         <meta name="keywords" content="CV, Bika, Développeur, Design, Web, Expériences, Compétences">
         <link rel="icon" href="icone.png" type="image/png">
         <link rel="stylesheet" href="styles.css">
-        <link rel="canonical" href="https://el-bika.github.io/Archi-TP/index.html">
+        <link rel="canonical" href="https://el-bika.github.io/Archi-TP/Curriculum.html">
     </head>
 <body>
     <header>
@@ -34,7 +34,6 @@
         </div>
 
         <div class="cv-content">
-
             <div class="cv-thumbnail-container">
                 <img src="thumbnail.jpg" alt="CV Thumbnail" class="cv-thumbnail">
                 <a href="cv.pdf" class="cv-btn" target="_blank">Voir mon CV en PDF</a>
@@ -42,13 +41,13 @@
         </div>
     </section>
 
-        <footer>
-         <p>&copy; 2024 Bika. Tous droits réservés.</p>
-          <div class="Suivez-moi">
+    <footer>
+        <p>&copy; 2024 Bika. Tous droits réservés.</p>
+        <div class="Suivez-moi">
             <a href="https://github.com/El-bika/" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/mohamed-amine-benkhalifa" target="_blank">LinkedIn</a>
-         </div>
-        </footer>
+        </div>
+    </footer>
     <script src="cv.js"></script>
 </body>
 </html>
