--- a/Contact.html
+++ b/Contact.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Contact</title>
+        <title>Contactez Bika - Développeur Web et Designer</title>
         <meta name="description" content="Contactez Bika, un passionné de design et de développement web.">
         <meta name="author" content="Mohamed Amine Benkhalifa">
         <meta name="keywords" content="Contact, Bika, Développeur, Design, Web">
         <link rel="icon" href="icone.png" type="image/png">
         <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-        <link rel="canonical" href="https://el-bika.github.io/Archi-TP/index.html">
+        <link rel="canonical" href="https://el-bika.github.io/Archi-TP/Contact.html">
     </head>
 <body>
     <header>
