Added optimal length description to all the pages+Sitemap

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -9,7 +9,7 @@
         <meta name="keywords" content="Portfolio, Bika, Projets, Créations, Design, Développement web">
         <link rel="icon" href="icone.png" type="image/png">
         <link rel="stylesheet" href="styles.css">
-        <link rel="canonical" href="https://el-bika.github.io/Archi-TP/index.html">
+        <link rel="canonical" href="https://el-bika.github.io/Archi-TP/Portfolio.html">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     </head>
 <body>
@@ -120,6 +120,9 @@
         <div class="Suivez-moi">
             <a href="https://github.com/El-bika/" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/mohamed-amine-benkhalifa" target="_blank">LinkedIn</a>
+        </div>
+        <div class="sitemap">
+            <a href="sitemap.xml">Sitemap</a>
         </div>
     </footer>
     <script src="cv.js"></script>
