--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio de Bika</title>
-    <meta name="description" content="Bienvenue sur le portfolio de Bika. Découvrez mes compétences, projets et expériences.">
+    <meta name="description" content="Bienvenue sur le portfolio de Bika. Découvrez mes compétences, projets et expériences en design et développement web.">
     <meta name="author" content="Mohamed Amine Benkhalifa">
     <meta name="keywords" content="Portfolio, Bika, Développeur, Compétences, Projets, Expériences">
     <link rel="icon" href="icone.png" type="image/png">
@@ -50,6 +51,9 @@
         <div class="Suivez-moi">
             <a href="https://github.com/El-bika/" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/mohamed-amine-benkhalifa" target="_blank">LinkedIn</a>
+        </div>
+        <div class="sitemap">
+            <a href="sitemap.xml">Sitemap</a>
         </div>
     </footer>
 </body>
