--- a/Contact.html
+++ b/Contact.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contactez Bika - Développeur Web et Designer</title>
-        <meta name="description" content="Contactez Bika, un passionné de design et de développement web.">
+        <meta name="description" content="Contactez Bika pour toute question ou proposition concernant le design et le développement web.">
         <meta name="author" content="Mohamed Amine Benkhalifa">
         <meta name="keywords" content="Contact, Bika, Développeur, Design, Web">
         <link rel="icon" href="icone.png" type="image/png">
@@ -56,6 +56,9 @@
         <div class="Suivez-moi">
             <a href="https://github.com/El-bika/" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/mohamed-amine-benkhalifa" target="_blank">LinkedIn</a>
+        </div>
+        <div class="sitemap">
+            <a href="sitemap.xml">Sitemap</a>
         </div>
     </footer>
 </body>
