--- a/Curriculum.html
+++ b/Curriculum.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CV de Bika - Développeur Web et Designer</title>
-        <meta name="description" content="Découvrez le CV de Bika, un passionné de design et de développement web.">
+        <meta name="description" content="Découvrez le parcours et les compétences de Bika, développeur web et designer passionné.">
         <meta name="author" content="Mohamed Amine Benkhalifa">
         <meta name="keywords" content="CV, Bika, Développeur, Design, Web, Expériences, Compétences">
         <link rel="icon" href="icone.png" type="image/png">
@@ -46,6 +46,9 @@
         <div class="Suivez-moi">
             <a href="https://github.com/El-bika/" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/mohamed-amine-benkhalifa" target="_blank">LinkedIn</a>
+        </div>
+        <div class="sitemap">
+            <a href="sitemap.xml">Sitemap</a>
         </div>
     </footer>
     <script src="cv.js"></script>
