Optimised Description for all the pages except index.html

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio de Bika - Projets et Créations</title>
-        <meta name="description" content="Découvrez les projets et créations de Bika, un passionné de design et de développement web.">
+        <meta name="description" content="Découvrez les projets et créations de Bika, un passionné de design et de développement web. Explorez mes affiches, couvertures et designs modernes.">
         <meta name="author" content="Mohamed Amine Benkhalifa">
         <meta name="keywords" content="Portfolio, Bika, Projets, Créations, Design, Développement web">
         <link rel="icon" href="icone.png" type="image/png">
