--- a/Competences.html
+++ b/Competences.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Gestion De Compétences - Bika</title>
-        <meta name="description" content="Découvrez les compétences de Bika en design et développement web.">
+        <meta name="description" content="Découvrez les compétences professionnelles et techniques de Bika en design et développement web.">
         <meta name="author" content="Mohamed Amine Benkhalifa">
         <meta name="keywords" content="Compétences, Bika, Développeur, Design, Web, Expériences">
         <link rel="icon" href="path/to/your/icon.png" type="image/png">
