--- a/Curriculum.html
+++ b/Curriculum.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CV de Bika - Développeur Web et Designer</title>
-        <meta name="description" content="Découvrez le parcours et les compétences de Bika, développeur web et designer passionné.">
+        <meta name="description" content="Découvrez le parcours, les compétences et les expériences de Bika, développeur web et designer passionné.">
         <meta name="author" content="Mohamed Amine Benkhalifa">
         <meta name="keywords" content="CV, Bika, Développeur, Design, Web, Expériences, Compétences">
         <link rel="icon" href="icone.png" type="image/png">
