--- a/Portfolio.html
+++ b/Portfolio.html
@@ -20,10 +20,10 @@
             </div>
             <ul class="menu-navigation">
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="Curriculum.html">CV</a></li>
-                <li><a href="Portfolio.html">Portfolio</a></li>
-                <li><a href="Competences.html">Gestion De Compétences</a></li>
-                <li><a href="Contact.html">Contact</a></li>
+                <li><a href="curriculum.html">CV</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="competences.html">Gestion De Compétences</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
