Fixed broken link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <img src="pdp.jpg" alt="Photo" class="photo-heros">
             <h1>Bienvenue, je suis BIKA</h1>
             <p>Étudiant en WEBDESIGN. Découvrez mon univers.</p>
-            <a href="Portfolio.html" class="bouton-cta">Explorer mon Portfolio</a>
+            <a href="portfolio.html" class="bouton-cta">Explorer mon Portfolio</a>
         </div>
     </section>
 
