Rajouté les Open Graph aux pages

--- a/competences.html
+++ b/competences.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Gestion De Compétences - Bika</title>
-        <meta name="description" content="Découvrez les compétences professionnelles et techniques de Bika en design et développement web ainsi que le ui/ux design.">
-        <meta name="author" content="Mohamed Amine Benkhalifa">
-        <meta name="keywords" content="Compétences, Bika, Développeur, Design, Web, Expériences">
-        <link rel="icon" href="path/to/your/icon.png" type="image/png">
-        <link rel="stylesheet" href="styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-        <link rel="canonical" href="https://el-bika.github.io/Archi-TP/Competences.html">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gestion De Compétences - Bika</title>
+    <meta name="description" content="Découvrez les compétences professionnelles et techniques de Bika en design et développement web ainsi que le ui/ux design.">
+    <meta name="author" content="Mohamed Amine Benkhalifa">
+    <meta name="keywords" content="Compétences, Bika, Développeur, Design, Web, Expériences">
+    <link rel="icon" href="path/to/your/icon.png" type="image/png">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="canonical" href="https://el-bika.github.io/Archi-TP/Competences.html">
+
+    <!-- Open Graph Metadata -->
+    <meta property="og:title" content="Gestion De Compétences - Bika">
+    <meta property="og:description" content="Découvrez les compétences professionnelles et techniques de Bika en design et développement web ainsi que le ui/ux design.">
+    <meta property="og:image" content="Competences_Thumbnail.jpg">
+    <meta property="og:url" content="https://el-bika.github.io/Archi-TP/Competences.html">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Metadata -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Gestion De Compétences - Bika">
+    <meta name="twitter:description" content="Découvrez les compétences professionnelles et techniques de Bika en design et développement web ainsi que le ui/ux design.">
+    <meta name="twitter:image" content="Competences_Thumbnail.jpg">
+</head>
 <body>
     <header>
         <nav>
