--- a/index.html
+++ b/index.html
@@ -9,8 +9,21 @@
     <meta name="keywords" content="Portfolio, Bika, Développeur, Compétences, Projets, Expériences">
     <link rel="icon" href="icone.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
-    <link rel="canonical" href="https://el-bika.github.io/Archi-TP/index.html">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="canonical" href="https://el-bika.github.io/Archi-TP/index.html">
+
+    <!-- Open Graph Metadata -->
+    <meta property="og:title" content="Portfolio de Bika">
+    <meta property="og:description" content="Bienvenue sur le portfolio de Bika. Découvrez mes compétences, projets et expériences en design et développement web.">
+    <meta property="og:image" content="Accueil_Thumbnail.jpg">
+    <meta property="og:url" content="https://el-bika.github.io/Archi-TP/index.html">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Metadata -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Portfolio de Bika">
+    <meta name="twitter:description" content="Bienvenue sur le portfolio de Bika. Découvrez mes compétences, projets et expériences en design et développement web.">
+    <meta name="twitter:image" content="Accueil_Thumbnail.jpg">
 </head>
 <body>
     <header>
