--- a/portfolio.html
+++ b/portfolio.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portfolio de Bika - Projets et Créations</title>
-        <meta name="description" content="Découvrez les projets et créations de Bika, un passionné de design et de développement web. Explorez mes affiches, couvertures et designs modernes.">
-        <meta name="author" content="Mohamed Amine Benkhalifa">
-        <meta name="keywords" content="Portfolio, Bika, Projets, Créations, Design, Développement web">
-        <link rel="icon" href="icone.png" type="image/png">
-        <link rel="stylesheet" href="styles.css">
-        <link rel="canonical" href="https://el-bika.github.io/Archi-TP/Portfolio.html">
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio de Bika - Projets et Créations</title>
+    <meta name="description" content="Découvrez les projets et créations de Bika, un passionné de design et de développement web. Explorez mes affiches, couvertures et designs modernes.">
+    <meta name="author" content="Mohamed Amine Benkhalifa">
+    <meta name="keywords" content="Portfolio, Bika, Projets, Créations, Design, Développement web">
+    <link rel="icon" href="icone.png" type="image/png">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="canonical" href="https://el-bika.github.io/Archi-TP/Portfolio.html">
+
+    <!-- Open Graph Metadata -->
+    <meta property="og:title" content="Portfolio de Bika - Projets et Créations">
+    <meta property="og:description" content="Découvrez les projets et créations de Bika, un passionné de design et de développement web. Explorez mes affiches, couvertures et designs modernes.">
+    <meta property="og:image" content="Portfolio_Thumbnail.jpg">
+    <meta property="og:url" content="https://el-bika.github.io/Archi-TP/Portfolio.html">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Metadata -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Portfolio de Bika - Projets et Créations">
+    <meta name="twitter:description" content="Découvrez les projets et créations de Bika, un passionné de design et de développement web. Explorez mes affiches, couvertures et designs modernes.">
+    <meta name="twitter:image" content="Portfolio_Thumbnail.jpg">
+</head>
 <body>
     <header>
         <nav>
@@ -39,9 +52,7 @@
                 <img src="ALA.png" alt="Projet 1" class="portfolio-image" onclick="openModal(this)">
                 <div class="portfolio-info">
                     <h3>Affiche A.L.A - Illustrator + Photoshop</h3>
-                    <p>L'affiche du clip "AIINA" d'A.L.A adopte une esthétique rétro tropicale avec
-                        des couleurs vives, mettant en valeur l'artiste au centre et un design moderne,
-                        tout en incluant des informations professionnelles.</p>
+                    <p>L'affiche du clip "AIINA" d'A.L.A adopte une esthétique rétro tropicale avec des couleurs vives, mettant en valeur l'artiste au centre et un design moderne, tout en incluant des informations professionnelles.</p>
                 </div>
             </div>
 
@@ -49,8 +60,7 @@
                 <img src="BOOK.png" alt="Projet 2" class="portfolio-image" onclick="openModal(this)">
                 <div class="portfolio-info">
                     <h3>Cover The Wild Ocean - Illustrator + Photoshop</h3>
-                    <p>L'affiche de "Wild Ocean" évoque l'exploration des océans avec un design
-                        dramatique mettant en avant la profondeur et la beauté de l'environnement sous-marin.</p>
+                    <p>L'affiche de "Wild Ocean" évoque l'exploration des océans avec un design dramatique mettant en avant la profondeur et la beauté de l'environnement sous-marin.</p>
                 </div>
             </div>
 
@@ -58,8 +68,7 @@
                 <img src="SHOPPLY.png" alt="Projet 3" class="portfolio-image" onclick="openModal(this)">
                 <div class="portfolio-info">
                     <h3>Shopply - Illustrator + Adobe Xd</h3>
-                    <p>Le design moderne et épuré de l'application Shopply offre une expérience de shopping
-                        fluide grâce à une interface intuitive.</p>
+                    <p>Le design moderne et épuré de l'application Shopply offre une expérience de shopping fluide grâce à une interface intuitive.</p>
                 </div>
             </div>
 
@@ -67,8 +76,7 @@
                 <img src="CARTE VISITE.png" alt="Projet 4" class="portfolio-image" onclick="openModal(this)">
                 <div class="portfolio-info">
                     <h3>Carte Visite Benkhalifa Consulting - Illustrator</h3>
-                    <p>Le logo de Benkhalifa Consulting représente l'interconnexion scientifique avec
-                        des éléments de design évoquant la précision et l'innovation.</p>
+                    <p>Le logo de Benkhalifa Consulting représente l'interconnexion scientifique avec des éléments de design évoquant la précision et l'innovation.</p>
                 </div>
             </div>
 
@@ -76,8 +84,7 @@
                 <img src="DECORIAT.png" alt="Projet 5" class="portfolio-image" onclick="openModal(this)">
                 <div class="portfolio-info">
                     <h3>Decoriat - Illustrator</h3>
-                    <p>Le design du site web Decoriat, minimaliste et moderne, met en valeur les produits
-                        et assure une expérience de navigation fluide et agréable.</p>
+                    <p>Le design du site web Decoriat, minimaliste et moderne, met en valeur les produits et assure une expérience de navigation fluide et agréable.</p>
                 </div>
             </div>
 
@@ -85,8 +92,7 @@
                 <img src="DENTAL.png" alt="Projet 6" class="portfolio-image" onclick="openModal(this)">
                 <div class="portfolio-info">
                     <h3>Dental Art - Illustrator</h3>
-                    <p>Le logo de Dental Art combine des éléments modernes et épurés pour refléter
-                        l'expertise et la précision du laboratoire dentaire.</p>
+                    <p>Le logo de Dental Art combine des éléments modernes et épurés pour refléter l'expertise et la précision du laboratoire dentaire.</p>
                 </div>
             </div>
 
@@ -94,8 +100,7 @@
                 <img src="JOKER.png" alt="Projet 7" class="portfolio-image" onclick="openModal(this)">
                 <div class="portfolio-info">
                     <h3>Affiche Joker 2 - Illustrator + Photoshop</h3>
-                    <p>L'affiche de "Joker 2" allie l'énergie sombre du film à un style graphique arabe
-                        ancien, avec des couleurs vives et des portraits dramatiques.</p>
+                    <p>L'affiche de "Joker 2" allie l'énergie sombre du film à un style graphique arabe ancien, avec des couleurs vives et des portraits dramatiques.</p>
                 </div>
             </div>
 
@@ -103,8 +108,7 @@
                 <img src="TRAVIS.png" alt="Projet 8" class="portfolio-image" onclick="openModal(this)">
                 <div class="portfolio-info">
                     <h3>Cover Travis Scott - Photoshop</h3>
-                    <p>La couverture d'album de Travis Scott met en avant l'artiste avec un texte liquide
-                        coloré et une texture brute, reflétant l'énergie de sa musique.</p>
+                    <p>La couverture d'album de Travis Scott met en avant l'artiste avec un texte liquide coloré et une texture brute, reflétant l'énergie de sa musique.</p>
                 </div>
             </div>
         </div>
