--- a/contact.html
+++ b/contact.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Contactez Bika - Développeur Web et Designer</title>
-        <meta name="description" content="Contactez Bika pour toute question ou proposition concernant le design et le développement web ainsi que le ui/ux design.">
-        <meta name="author" content="Mohamed Amine Benkhalifa">
-        <meta name="keywords" content="Contact, Bika, Développeur, Design, Web">
-        <link rel="icon" href="icone.png" type="image/png">
-        <link rel="stylesheet" href="styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-        <link rel="canonical" href="https://el-bika.github.io/Archi-TP/Contact.html">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contactez Bika - Développeur Web et Designer</title>
+    <meta name="description" content="Contactez Bika pour toute question ou proposition concernant le design et le développement web ainsi que le ui/ux design.">
+    <meta name="author" content="Mohamed Amine Benkhalifa">
+    <meta name="keywords" content="Contact, Bika, Développeur, Design, Web">
+    <link rel="icon" href="icone.png" type="image/png">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="canonical" href="https://el-bika.github.io/Archi-TP/Contact.html">
+
+    <!-- Open Graph Metadata -->
+    <meta property="og:title" content="Contactez Bika - Développeur Web et Designer">
+    <meta property="og:description" content="Contactez Bika pour toute question ou proposition concernant le design et le développement web ainsi que le ui/ux design.">
+    <meta property="og:image" content="Contact_Thumbnail.jpg">
+    <meta property="og:url" content="https://el-bika.github.io/Archi-TP/Contact.html">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Metadata -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Contactez Bika - Développeur Web et Designer">
+    <meta name="twitter:description" content="Contactez Bika pour toute question ou proposition concernant le design et le développement web ainsi que le ui/ux design.">
+    <meta name="twitter:image" content="Contact_Thumbnail.jpg">
+</head>
 <body>
     <header>
         <nav>
@@ -34,7 +47,7 @@
             <p>Vous avez des questions ou des propositions ? N'hésitez pas à me contacter !</p>
         </div>
 
-        <form id="contact-form">
+        <form id="contact-form" action="submit_contact.php" method="POST">
             <div class="form-group">
                 <label for="name">Nom</label>
                 <input type="text" id="name" name="name" required>
