--- a/curriculum.html
+++ b/curriculum.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CV de Bika - Développeur Web et Designer</title>
-        <meta name="description" content="Découvrez le parcours, les compétences et les expériences de Bika, développeur web et designer passionné.">
-        <meta name="author" content="Mohamed Amine Benkhalifa">
-        <meta name="keywords" content="CV, Bika, Développeur, Design, Web, Expériences, Compétences">
-        <link rel="icon" href="icone.png" type="image/png">
-        <link rel="stylesheet" href="styles.css">
-        <link rel="canonical" href="https://el-bika.github.io/Archi-TP/Curriculum.html">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CV de Bika - Développeur Web et Designer</title>
+    <meta name="description" content="Découvrez le parcours, les compétences et les expériences de Bika, développeur web et designer passionné.">
+    <meta name="author" content="Mohamed Amine Benkhalifa">
+    <meta name="keywords" content="CV, Bika, Développeur, Design, Web, Expériences, Compétences">
+    <link rel="icon" href="icone.png" type="image/png">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="canonical" href="https://el-bika.github.io/Archi-TP/Curriculum.html">
+
+    <!-- Open Graph Metadata -->
+    <meta property="og:title" content="CV de Bika - Développeur Web et Designer">
+    <meta property="og:description" content="Découvrez le parcours, les compétences et les expériences de Bika, développeur web et designer passionné.">
+    <meta property="og:image" content="Cv_Thumbnail.jpg">
+    <meta property="og:url" content="https://el-bika.github.io/Archi-TP/Curriculum.html">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Metadata -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="CV de Bika - Développeur Web et Designer">
+    <meta name="twitter:description" content="Découvrez le parcours, les compétences et les expériences de Bika, développeur web et designer passionné.">
+    <meta name="twitter:image" content="Cv_Thumbnail.jpg">
+</head>
 <body>
     <header>
         <nav>
