Changed broken url related to open graph

--- a/competences.html
+++ b/competences.html
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Gestion De Compétences - Bika">
     <meta property="og:description" content="Découvrez les compétences professionnelles et techniques de Bika en design et développement web ainsi que le ui/ux design.">
     <meta property="og:image" content="Competences_Thumbnail.jpg">
-    <meta property="og:url" content="https://el-bika.github.io/Archi-TP/Competences.html">
+    <meta property="og:url" content="https://el-bika.github.io/Archi-TP/competences.html">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card Metadata -->
