--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Contactez Bika - Développeur Web et Designer">
     <meta property="og:description" content="Contactez Bika pour toute question ou proposition concernant le design et le développement web ainsi que le ui/ux design.">
     <meta property="og:image" content="Contact_Thumbnail.jpg">
-    <meta property="og:url" content="https://el-bika.github.io/Archi-TP/Contact.html">
+    <meta property="og:url" content="https://el-bika.github.io/Archi-TP/contact.html">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card Metadata -->
