--- a/curriculum.html
+++ b/curriculum.html
@@ -16,7 +16,7 @@
     <meta property="og:title" content="CV de Bika - Développeur Web et Designer">
     <meta property="og:description" content="Découvrez le parcours, les compétences et les expériences de Bika, développeur web et designer passionné.">
     <meta property="og:image" content="Cv_Thumbnail.jpg">
-    <meta property="og:url" content="https://el-bika.github.io/Archi-TP/Curriculum.html">
+    <meta property="og:url" content="https://el-bika.github.io/Archi-TP/curriculum.html">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card Metadata -->
