--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Portfolio de Bika - Projets et Créations">
     <meta property="og:description" content="Découvrez les projets et créations de Bika, un passionné de design et de développement web. Explorez mes affiches, couvertures et designs modernes.">
     <meta property="og:image" content="Portfolio_Thumbnail.jpg">
-    <meta property="og:url" content="https://el-bika.github.io/Archi-TP/Portfolio.html">
+    <meta property="og:url" content="https://el-bika.github.io/Archi-TP/portfolio.html">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card Metadata -->
